report busy/idle time
